Enhance navigation and footer design; add contact buttons and improve responsiveness

--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DevOps On-Call Support</title>
+  <title>DevOps On-Call Support — VL Engineering Services</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+  <!-- ════════ NAV ════════ -->
+  <nav class="nav">
+    <div class="nav-inner">
+      <a href="#" class="nav-brand">
+        <span class="nav-logo">VL</span>
+        <span class="nav-name">Engineering Services</span>
+      </a>
+      <a href="mailto:vlysetskyi.engineering@gmail.com" class="btn btn-nav">Get in Touch</a>
+    </div>
+  </nav>
 
   <!-- ════════ HERO ════════ -->
   <section class="hero">
     <h1>DevOps On-Call Support</h1>
     <p>Reliable 24/7 operational coverage with structured monitoring, fast incident response, and clear escalation.</p>
+    <a href="mailto:vlysetskyi.engineering@gmail.com" class="btn btn-hero">Contact Us</a>
   </section>
 
   <!-- ════════ PRICING TIERS ════════ -->
@@ -373,7 +385,9 @@
 
   <!-- ════════ FOOTER ════════ -->
   <footer class="footer">
-    <p>DevOps On-Call Support · All pricing in USD · Standby covers availability and monitoring · Resolution billed for active handling only</p>
+    <div class="footer-brand">VL Engineering Services</div>
+    <p>All pricing in USD · Standby covers availability and monitoring · Resolution billed for active handling only</p>
+    <a href="mailto:vlysetskyi.engineering@gmail.com" class="btn btn-footer">vlysetskyi.engineering@gmail.com</a>
   </footer>
 
 </body>
